update on hover

--- a/service.css
+++ b/service.css
@@ -67,9 +67,14 @@ h6 {
 	-o-transition: all 0.5s ease;
 }
 
-.btn-primary:hover {
+.btn-primary:hover { 
 	-webkit-box-shadow: 0 5px 9px -4px rgb(0 0 255 / 65%);
 	box-shadow: 0 5px 9px -4px rgb(0 0 255 / 65%);
+}
+#services .btn-primary:hover{
+	background-color: #9b32a8;
+	transition: all 0.4s ease-in-out;
+	
 }
 
 .card-items .card {
@@ -99,6 +104,7 @@ h6 {
 	justify-content: center;
 	align-items: center;
 }
+
 
 .card-items .card .card-body .card-title {
 	margin-bottom: .75rem;
