--- a/style.css
+++ b/style.css
@@ -316,146 +316,6 @@ h6 {
   margin-right: 12px;
   margin-top: -5px;
 }
-
-
-
-/* Testimonial End */
-/* Video card */
-/*body {
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 0px;
-  font-size: 16px;
-  color: #7d7f82;
-  font-weight: 400;
-  line-height: 32px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: #26282c;
-  margin: 0px 0px 12px 0px;
-  font-family: 'Glegoo', serif;
-  font-weight: 700;
-  line-height: 1;
-}
-
-h1 {
-  font-size: 36px;
-}
-
-h2 {
-  font-size: 26px;
-  line-height: 38px;
-}
-
-h3 {
-  font-size: 22px;
-  line-height: 32px;
-}
-
-h4 {
-  font-size: 20px;
-}
-
-h5 {
-  font-size: 16px;
-  line-height: 27px;
-}
-
-h6 {
-  font-size: 12px;
-}
-
-p {
-  margin: 0 0 20px;
-  line-height: 1.7;
-}
-
-p:last-child {
-  margin: 0px;
-}
-
-ul,
-ol {
-  font-family: 'Roboto', sans-serif;
-}
-
-a {
-  text-decoration: none;
-  color: #7d7f82;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-a:focus,
-a:hover {
-  text-decoration: none;
-  color: #fe5b10;
-}
-
-
-
-.video-testimonial-block {
-  position: relative;
-  width: auto;
-  height: 206px;
-  overflow: hidden;
-  margin-bottom: 30px;
-}
-
-.video-testimonial-block .video-thumbnail {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  z-index: 1;
-  background-size: cover;
-  top: 0;
-  left: 0;
-}
-
-.video-testimonial-block .video iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0px;
-}
-
-.video-testimonial-block .video-play {
-  position: absolute;
-  z-index: 2;
-  top: 50%;
-  left: 50%;
-  margin-left: -40px;
-  margin-top: -18px;
-  text-decoration: none;
-}
-
-.video-testimonial-block .video-play::before {
-  content: "\f144";
-  font: normal normal normal 14px/1;
-  font-family: 'Font Awesome\ 5 Free';
-  font-weight: 900;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-size: 50px;
-  color: #b3b5bc;
-}
-
-.video-testimonial-block .video-play:hover::before {
-  color: #172651;
-}
- */
 .mb10 {
   margin-bottom: 10px;
 }
@@ -498,8 +358,6 @@ p {
   background: #664AFF;
 }
 
-
-
 .wrapper .search-input {
   background: #fff;
   width: 100%;
@@ -508,66 +366,11 @@ p {
   box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12);
 }
 
-/*.search-input input {
-  height: 45px;
-  width: 100%;
-  outline: none;
-  border: none;
-  border-radius: 5px;
-  padding: 0 82px 0 27px;
-  font-size: 18px;
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
-}
-
-.search-input.active input {
-  border-radius: 5px 5px 0 0;
-}
-
-.search-input .autocom-box {
-  padding: 0;
-  opacity: 0;
-  pointer-events: none;
-  max-height: 280px;
-  overflow-y: auto;
-}
-
-.search-input.active .autocom-box {
-  padding: 10px 8px;
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.autocom-box li {
-  list-style: none;
-  padding: 8px 12px;
-  display: none;
-  width: 100%;
-  cursor: default;
-  border-radius: 3px;
-}
-
-.search-input.active .autocom-box li {
-  display: block;
-}
-
-.autocom-box li:hover {
-  background: #efefef;
-}
-
-.search-input .icon {
-  position: absolute;
-  right: 0px;
-  top: -4px;
-  height: 55px;
-  width: 55px;
-  text-align: center;
-  line-height: 55px;
-  font-size: 20px;
-  color: #20bf55;
-  cursor: pointer;
-} */
-
   #footer-url{
   text-decoration: none;
   }
-
+#heading{
+  background: -webkit-linear-gradient(rgb(217, 179, 243), rgb(109, 32, 211));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
