--- a/style.css
+++ b/style.css
@@ -104,6 +104,10 @@ h6 {
 	border-radius: .25rem;
 	box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.08);
 	margin-bottom: 30px;
+  border-radius: 16px !important;
+	background: linear-gradient(145deg, #e6e6e6, #ffffff) !important;
+	box-shadow:  19px 19px 22px #787878,
+				 -19px -19px 22px #ffffff !important;
 }
 
 .card-items .card .card-body i {
