--- a/style.css
+++ b/style.css
@@ -197,6 +197,7 @@ h6 {
     width: 160px;
     z-index: 1;
   }
+  
 }
 
 @media screen and (min-width:769px) and (max-width:900px){
@@ -546,4 +547,6 @@ h6 {
 	  color: #506372 !important;
   }
 
-
+#marquee{
+  font-weight: bold;
+}
