--- a/blog.css
+++ b/blog.css
@@ -1,4 +1,5 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 html{
     scroll-behavior: smooth;
@@ -11,7 +12,8 @@ body{
 .bootstrap-nav{
     margin: 0px;
     font-weight: bold;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-display: swap;
 }
 
 
@@ -32,6 +34,11 @@ body{
       z-index: 1;
     }
   }
+
+h1 h2 h3 h4 h5{
+    font-family: 'Poppins', sans-serif;
+    font-display: swap;
+}  
   
   @media screen and (min-width:769px) and (max-width:900px){
     #logo img{
@@ -96,7 +103,8 @@ body{
     margin-bottom: 0;
     font-size: 14px;
     font-weight: 400;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-display: swap;
     line-height: 1.42857143;
     text-align: center;
     white-space: nowrap;
@@ -231,6 +239,7 @@ p:last-child {
 }
 #paragraph-font{
     font-family: 'Ubuntu', sans-serif;
+    font-display: swap;
 }
 
 
