--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 ::-webkit-scrollbar{
   width:5px;
 }
@@ -13,7 +15,8 @@ html {
 }
 body {
   margin: 0px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-display: swap;
 }
 
 .pt-100 {
@@ -46,6 +49,11 @@ p {
 	padding: 0px;
 }
 
+
+h1 h2 h3 h4 h5{
+  font-family: 'Poppins', sans-serif;
+  font-display: swap;
+}  
 h1,
 h2,
 h3,
@@ -55,6 +63,7 @@ h6 {
 	margin: 0;
 	padding: 0;
 	color: #282936;
+ 
 }
 
 #services .title {
@@ -131,7 +140,8 @@ h6 {
 .bootstrap-nav {
   margin: 0px;
   font-weight: bold;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-display: swap;
 }
 
 #logo img{
