--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 ::-webkit-scrollbar-thumb{
   border-radius: 20px;
-  background: -webkit-gradient(linear, left top , left bottom, from(#9406e6), to(#da1b60));
+  background: -webkit-gradient(linear, left top , left bottom, from(#DC3545), to(#da1b60));
   box-shadow: inset 2px 2px 2px rgba(74, 255, 2, 0.877), inset -2px -2px -2px rgba(0,0,0,0.25);
 }
 html {
@@ -122,7 +122,7 @@ h6 {
 .card-items .card .card-body i {
 	border-radius: 6px;
 	font-size: 31px;
-	color: #9b32a8;
+	color: #DC3545;
 	background-color: #ff57221c;
 	width: 50px;
 	height: 50px;
@@ -156,7 +156,7 @@ h6 {
   position: fixed;
   bottom:30px;
   left:30px;
-  background:#9b32a8;
+  background:#DC3545;
   max-width: 300px;
   border-radius: 15px;
   padding:25px 25px 30px 25px;
@@ -443,7 +443,7 @@ h6 {
 
 #services .title span {
 	font-size: 46px;
-	color: #9b32a8;
+	color: #DC3545;
 	font-weight: 600;
 }
 
@@ -468,7 +468,7 @@ h6 {
 	box-shadow: 0 5px 9px -4px rgb(0 0 255 / 65%);
 }
 #services .btn-primary:hover{
-	background-color: #9b32a8;
+	background-color: #DC3545;
 	transition: all 0.4s ease-in-out;
 	
 }
@@ -496,7 +496,7 @@ h6 {
 .card-items .card .card-body i {
 	border-radius: 6px;
 	font-size: 31px;
-	color: #9B32A8;
+	color: #DC3545;
 	background-color: #9a32a836;
 	width: 50px;
 	height: 50px;
@@ -565,4 +565,63 @@ h6 {
    color:wheat;
    font-weight: bold;
   
+}
+
+.card-counter{
+  box-shadow: 2px 2px 10px #DADADA;
+  margin: 5px;
+  padding: 20px 10px;
+  background-color: #fff;
+  height: 100px;
+  border-radius: 5px;
+  transition: .3s linear all;
+}
+
+.card-counter:hover{
+  box-shadow: 4px 4px 20px #DADADA;
+  transition: .3s linear all;
+}
+
+.card-counter.primary{
+  background-color: #007bff;
+  color: #FFF;
+}
+
+.card-counter.danger{
+  background-color: #ef5350;
+  color: #FFF;
+}  
+
+.card-counter.success{
+  background-color: #66bb6a;
+  color: #FFF;
+}  
+
+.card-counter.info{
+  background-color: #26c6da;
+  color: #FFF;
+}  
+
+.card-counter i{
+  font-size: 5em;
+  opacity: 0.2;
+}
+
+.card-counter .count-numbers{
+  position: absolute;
+  right: 35px;
+  top: 20px;
+  font-size: 32px;
+  display: block;
+}
+
+.card-counter .count-name{
+  position: absolute;
+  right: 35px;
+  top: 65px;
+  font-style: italic;
+  text-transform: capitalize;
+  opacity: 0.5;
+  display: block;
+  font-size: 18px;
 }
