EDUPROV : 26-06-2021 Redesign content layout 3/3 and move to bootstrap 5.0

--- a/blog.css
+++ b/blog.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Poppins&display=swap);@import url(https://fonts.googleapis.com/css2?family=Ubuntu&display=swap);html{scroll-behavior:smooth}body{margin:0;font-family:Ubuntu,sans-serif;font-display:swap}.bootstrap-nav{margin:0;font-weight:700;font-family:Poppins,sans-serif;font-display:swap}
+@import url(https://fonts.googleapis.com/css2?family=Poppins&display=swap);@import url(https://fonts.googleapis.com/css2?family=Ubuntu&display=swap);html{scroll-behavior:smooth}body{margin:0;font-family:Ubuntu,sans-serif;font-display:swap}
 .logo img
 {left:600px;top:120px;width:160px;z-index:9999}
 
