--- a/blog.css
+++ b/blog.css
@@ -103,3 +103,12 @@ nav{
     
   }
 
+.banner{
+      background-color: #d31815;
+      background-image: linear-gradient(to left, #f80b07 0%, #db3f3c 74%); 
+      width: 100%;
+      height: 350px;
+      padding-top:30px;
+      background-position: center center;
+      background-size: cover;
+}  
