--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css2?family=Poppins&display=swap);
-
 html {
   scroll-behavior: smooth;
 }
@@ -536,7 +534,7 @@ nav {
 .nav-links {
   display: flex;
   list-style: none;
-  width: 18%;
+  width: 24%;
   height: 100%;
   justify-content: space-around;
   align-items: center;
@@ -618,7 +616,7 @@ nav {
 .section-services {
   font-family: "Poppins", sans-serif;
   color: #202020;
-  padding-top: 50px;
+  padding-top: -10px;
   padding-bottom: 10px;
 }
 
@@ -839,7 +837,7 @@ nav {
 }
 
 .testimonials-clean {
-  color: #313437;
+  color: #313437 !important;
   background-color: #eef4f7;
 }
 
@@ -948,6 +946,9 @@ nav {
 #footer-bold-label {
   font-weight: bold;
 }
+
+
+
 
 .testimonial-bg {
   /* border: 10px solid #be6c73; */
@@ -1117,42 +1118,4 @@ nav {
   }
 }
 
-.float {
-  position: fixed;
-  width: 60px;
-  height: 60px;
-  bottom: 20px;
-  left: 20px;
-  background-color: #25d366;
-  color: #fff;
-  border-radius: 50px;
-  text-align: center;
-  font-size: 30px;
-  box-shadow: 2px 2px 3px #999;
-  z-index: 100;
-}
 
-.float:hover {
-  position: fixed;
-  width: 60px;
-  height: 60px;
-  bottom: 30px;
-  transition: 1s ease-in-out;
-  left: 20px;
-  background-color: #25d366;
-  color: #fff;
-  border-radius: 50px;
-  text-align: center;
-  font-size: 30px;
-  box-shadow: 2px 2px 3px #999;
-  z-index: 100;
-  text-decoration: none;
-}
-
-.my-float {
-  margin-top: 16px;
-}
-
-#location-3{
-  margin-top: -20px !important;
-}
