--- a/blog.css
+++ b/blog.css
@@ -38,11 +38,12 @@ nav{
 .nav-links{
     display: flex;
     list-style: none;
-    width: 27%;
+    width: 47%;
     height:100%;
     justify-content: space-around;
     align-items: center;
     margin-left: auto;
+    font-weight: bold;
 }
 .nav-links li a{
     color:white;
@@ -153,7 +154,7 @@ input[type=text]{
 input[type=text]:focus {
    outline: none;
    border: 1px solid #889196 ;
-   color: #2d9fd9;
+   color: #889196;
 }
 .selectWrapper{
   border-radius: 20px;
@@ -175,7 +176,7 @@ input[type=text]:focus {
   -moz-border-radius: 20px;
    border-radius: 10px;
    border: 1px solid #889196;
-   color: #a0d18c;
+   color: #889196;
    width: 540px;
    padding-left: 10px;
   
@@ -185,7 +186,7 @@ input[type=text]:focus {
   -moz-border-radius: 20px;
    border-radius: 10px;
    border: 1px solid #889196;
-   color: #a0d18c;
+   color: #889196;
    width: 540px;
    padding-left: 10px;
   
@@ -250,6 +251,18 @@ textarea:focus, input:focus{
      outline: 0;
     
   }
+  .textarea:focus{
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+     border-radius: 10px;
+     border: 1px solid #889196;
+     color: #889196;
+     width: 300px;
+     padding-left: 10px;
+     margin-left: 70px;
+     outline: 0;
+    
+  }
   textarea:focus, input:focus{
     outline: 0;
 }
@@ -301,6 +314,18 @@ textarea:focus, input:focus{
     color:#616466;
   }
   .textarea{
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+     border-radius: 10px;
+     border: 1px solid #889196;
+     color: #889196;
+     width: 450px;
+     padding-left: 10px;
+     margin-left: 90px;
+     outline: 0;
+    
+  }
+  .textarea:focus{
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
      border-radius: 10px;
